tests/sources/should-not-compile/for-missing-assignmnet.c
int x = 10;
int y = 0;

for (int i = 0 i < 10 i = i + 1)
{
    x = x + i;
}

for (int i = 0; i < 10; i = i + 1)
{

    for (int i = 0; i < 10; i + 1)
    {
        y = y + i;
    }

    for (int i = 0; i < 10;)
    {
        y = y + i;
    }

    for (int i = 0; if (i < 10); i = i + 1)
    {
        x = x + i;
    }

for int i = 0 i < 10 i = i + 1)  x = x + i;

while (x < 10;)
{
    x = x + 1;
}

while
    x < 10;
{
    x = x + 1;
}

while (x +)
    y = y + 1;

do
    x = x + 1 while x < 5;

do
{
    x = x + 1;
} while;

do
    x = x + 1;
while x + ;

do
    y = y + 1;

repeat x = x + 1;
until x > 10;

repeat y = y + 1 until;

repeat until(y > 10);

repeat y = y + 1;